# schemaless-databases

./: .gitignore  LICENSE  README.md  run-arango.sh
Country-Sales-Data-GeneratorPlus03/: Country-Sales-Data-GeneratorPlus03_100.csv  Country-Sales-Data-GeneratorPlus03_100.json  Country-Sales-Data-GeneratorPlus03_1Mio.csv  Country-Sales-Data-GeneratorPlus03_1Mio.json  Databases.md  csv2json.py  subCsv.py
benchmarks/: Leistungsbewertung ArangoDB.xlsx  create_data.py  run-tests.sh  script.py
benchmarks/big_data/: out_13.json  out_2.json  out_3.json  out_7.json  out_9.json
benchmarks/results_1/: 0_1.txt  0_1000000.txt  100_1.txt  100_1000.txt  100_1000000.txt  20_1.txt  20_1000.txt  20_1000000.txt  50_1.txt  50_1000.txt  50_1000000.txt
benchmarks/results_2/: 0_1.txt  0_1000.txt  0_1000000.txt  100_1.txt  100_1000.txt  100_1000000.txt  20_1.txt  20_1000.txt  20_1000000.txt  50_1.txt  50_1000.txt  50_1000000.txt
benchmarks/results_3/: 0_1.txt  0_1000.txt  (+10 more)
order/: package-lock.json  package.json
supplier/: create-db-jsons.sh  create_item_list.py  prepare_items.py  prepare_suppliers.py  replace_name_with_id_in2list.py
supplier-app/: package-lock.json  package.json  tsconfig.json
supplier/api/: README.md  pyproject.toml  run-API.sh
supplier/api/src/supplier_api/: __main__.py  __main___test.py  constants.py
supplier/api/src/supplier_api/database/: __init__.py  item.py  supplier.py
supplier/api/src/supplier_api/models/: item.py  supplier.py
supplier/api/src/supplier_api/order_db/: __index__.py
supplier/api/src/supplier_api/resources/: item.py  supplier.py
(+60 files in other folders)
